[project]
name = "subnetscope"
version = "0.1.0"
description = "Read-only Bittensor subnet directory: list/sort/filter subnets by registration fee, type, liquidity, age, and emissions."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "subnetscope" }]
license = { text = "MIT" }
dependencies = [
  "bittensor>=10.0.0",
  "pyyaml>=6.0",
  "click>=8.1",
  "rich>=13.7",
  "httpx>=0.27",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "jinja2>=3.1",
  "markdown>=3.6",
  "pygments>=2.18",
]

[project.scripts]
subnetscope = "subnetscope.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["subnetscope"]
